# snake-game

./: .gitignore  CMakeLists.txt  README.md
include/: asset_manager.hpp  game.hpp  game_over.hpp  game_pause.hpp  game_play.hpp  main_menu.hpp  snake.hpp  state.hpp  state_manager.hpp
src/: asset_manager.cpp  game.cpp  game_over.cpp  game_pause.cpp  game_play.cpp  main.cpp  main_menu.cpp  snake.cpp  state_manager.cpp
